# NCKH_2021-2023

./: README.md
Code/Arduino Mega/main/: main.ino
Code/Arduino Mega/main_v2/: main_v2.ino
Code/Arduino Mega/main_v3/: main_v3.ino
Code/Data_Base/: Database.py  demo.py
Code/Test/: Kinematics.py  Traject.py  a.csv  a.py  evaluate.py  main_kinematics.py  plot.py  tutorial.txt
Report/: Bao cao TK.docx  Báo cáo mô hình bản sao số.docx  Báo cáo tổng kết.docx  GIAI TRINH CUA CHU NHIEM-CHU BIEN.doc  Mau 21 - Bao cao tong ket, bao cao tom tat.doc  Mau 22 - Trang bia bao cao tong ket de tai.doc  Mau 23 - Trang phu bia bao cao tong ket de tai.doc  Mau 24 - Thong tin ket qua nghien cuu.doc  ~$o cáo tổng kết.docx
Report/TMDC/: TMDC_Tran Tuan Anh edited.docx
Software/Digital Twin Project_Data/: boot.config
Software/Finnal/Digital Twin Project_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info
Software/V2/Digital Twin Project_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json
Software/V3/Digital Twin Project_Data/: RuntimeInitializeOnLoads.json
servo/: CMakeLists.txt  Tutorial.txt  data_unity.csv  package.xml
servo/config/: params.yaml
servo/launch/: check.launch  main.launch  main_.launch
servo/msg/: Joints_publish.msg  Joints_sub.msg  Main.msg  Status.msg  Trajectory.msg  Virtual.msg
servo/scripts/: Center.py  Processer.py  controller.py  main.py  save.py  server.py  servo_arduino.py  servo_demo.py  servo_publisher.py  test.py
servo/scripts/Database/: Database.py  demo.py  demo1.py
(+4 files in other folders)
